fix background and text alignment issue

--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
+/*html {
   @apply h-full
-}
+}*/
 
 body {
-  @apply bg-no-repeat bg-gradient-to-br from-gray-700 to-orange-500;
+  @apply min-h-screen bg-gradient-to-br from-gray-700 to-orange-500 bg-cover;
   width: 800px;
   max-width: calc(100% - 2rem);
   margin-inline: auto;
